zkay/examples/type_errors/BoolToUInt.sol
pragma solidity ^0.5.0;

contract BoolToUInt {

	function f() public {
		uint x;
		x = false;
	}

}
